# Celerie

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
celerie/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: tasks.py  views.py
core/management/commands/: email_report.py
