[tool.poetry]
name = "celerie"
version = "0.1.0"
description = ""
authors = ["callistachang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.7"
celery = "^4.4.5"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
